# OmniX-Core

./: .dockerignore  .gitignore  AgileWorkflow.cpp  AgileWorkflow.h  AnalysisReport.cpp  AnalysisReport.h  CMakeLists.txt  CONTRIBUTING.md  ComparisonResult.cpp  ComparisonResult.h  Dockerfile  ExpressionUtils.cpp  ExpressionUtils.h  FunctionAnalyzer.cpp  FunctionAnalyzer.h  FunctionProfile.cpp  FunctionProfile.h  Goal.md  README.md  VersusComparator.cpp  VersusComparator.h  functionAnalyzer.h  main.cpp
WebApp/: .dockerignore  .env.example  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json
WebApp/app/: globals.css  layout.tsx  page.tsx
WebApp/app/admin/: actions.ts  layout.tsx  page.tsx
WebApp/app/blog/: page.tsx
WebApp/components/: markdown-renderer.tsx  section-heading.tsx  site-footer.tsx  site-header.tsx
WebApp/lib/: auth.ts  blog.ts  site-content.ts
WebApp/scripts/: railway-up.sh
cmake/: RunSmokeHelper.cmake  ValidateGeneratedXpp.cmake  ValidateInstallLayout.cmake  ValidatePackageArtifacts.cmake  ValidateReleaseArtifacts.cmake
dep/: README 2.md
docs/: NeuralNetwork.txt  OPERAND_GUIDE.md  TurningScale  smoke-tests.md
docs/agile/: 00-roadmap.md  10-epic-source-driven-execution.md  100-immediate-goals-simplex-defense-soak-persona.md  101-neuromorphic-backtrace-backtest-backadd.md  102-neuralnetwork-tensorflow-math-track.md  103-native-neural-signal-router.md  104-proactive-infrastructure-thresholds.md  105-ghostline-gg-integration.md  106-recursive-why-diff-and-api-link-ux.md  107-freertos-firmware-communications.md  108-vim-neovim-operator-bridge.md  109-salt-style-jinja-node-master.md  110-apple-intelligence-local-ai-ml-bridge.md  111-local-tensor-framework-and-deepnimsec-runtime.md  112-slash-dedupe-storage-and-openai-api-ux.md  113-operational-intelligence-pipeline.md  114-twilio-alerting-and-tenant-master-minion-wizard.md  20-epic-stateful-query-runtime.md  30-epic-language-engine-probability-loop.md  40-epic-self-preprocessor-uac.md  50-epic-security-simulation-audit.md  60-epic-tze-conformance-tests.md  90-backlog-post-v2.md  95-v3-guard-policy.md  96-v3-knowledge-routing-and-definition.md  97-v2-prepost-teaching-and-retrieval-foundations.md  98-xpp-module-recipe-authoring.md  99-legacy-xpp-translation-map.md  B-00-prime-arc-b-roadmap.md  B-10-raw-data-ingestion.md  B-20-transforms-normalization-and-reindexing.md  B-30-ontology-object-layer-and-lineage.md  B-40-decision-logic-and-repeatable-functions.md  B-50-analyst-workflows-permissions-and-actions.md  B-60-feedback-memory-and-reprocessing-loops.md  B-70-reporting-audit-and-explainability.md  B-80-scale-iteration-and-deterministic-execution.md  B-90-post-b-extensions.md  C-00-prime-arc-c-reference-map.md
docs/architecture/: mlp-lens.md  recursive-why-diff.md
docs/man/: omnix.1  omnix.1.md
docs/study/: tensor-architecture-notes.md
examples/jinja/: infra-triage-plan.j2  infra-triage-vars.json
include/: versus_comparator.hpp
include/tze/: analyst_flow_interpreter.hpp  build_executor.hpp  build_flow_interpreter.hpp  cache_coordinator.hpp  definition_engine.hpp  definition_flow_interpreter.hpp  engine.hpp  instance_identity.hpp  intent_resolver.hpp  io_runtime.hpp  knowledge_engine.hpp  language_engine.hpp  memory_store.hpp  namespace_registry.hpp  native_tool_registry.hpp  neural_math_engine.hpp  neural_signal_router.hpp  omni_bridge.hpp  operand.hpp  packet_capture_engine.hpp  preprocessor_runtime.hpp  processing_engine.hpp  project_alias_registry.hpp  project_resolver.hpp  query_runtime.hpp  reasoning_provider.hpp  recipe_authoring_engine.hpp  sdk.hpp  security_manager.hpp  self_review.hpp  session_coordinator.hpp  shell_lexicon.hpp  tool_flow_interpreter.hpp  types.hpp  unix_evidence_parser.hpp  workflow_support.hpp
include/xpp/: emitter.hpp  index.hpp  parser.hpp  types.hpp
models/: DeepNimSec-Omni.Modelfile
res/: IMG_0472.HEIC  IMG_0473.HEIC  IMG_0474.HEIC  Log-0001  Log-0002  Log-0002b  MLP.md  PLAN.md  RecursionANDTroubleshooting  TNESORS.md  local_glossary.tsv  tze.txt
res/ProactiveMaintainance/: OutageWindow.md  Response and Thresholds.md
res/ghostline/: ghostline_actions_fixture.jsonl  ghostline_audit_fixture.jsonl
res/mlp_lens/: tiny_mlp_bundle.json
res/ops/: dependency-map-outage-window.json  elastic-siem-metatag-blob.json  elastic-siem-rabbitmq-xxb.json  encrypted-siem-custody.json  package-manager-activity.json  recovery-comparison-worker-restart.json  rum-heuristic-behavior.json  syslog-lastlog-correlation.json  windows-eventviewer-retention-healthy.json  windows-eventviewer-retention-low.json
res/thresholds/: error-signature-eyz-47281.json  gsmg-outage-window-db-guard.json  gsmg-rabbitmq-xxb.json  output.json  ownership-map-xxb.json  rabbitmq-xxb-incident.json  rabbitmq-xxb-normal-season.json  rabbitmq-xxb-seasonal-tolerated.json  rabbitmq-xxb-unknown-error.json  runbook-restart-abc-worker.json
scripts/: create_deepnimsec_ollama_model.sh  daily_omnix.sh  link_omnix.sh  omnix_deepnimsec.sh  omnix_openai.sh  omnix_tensorflow_env_check.sh  release_local.sh  smoke_test_package.sh  soak_omnix.sh
src/: analyst_flow_interpreter.cpp  build_executor.cpp  build_flow_interpreter.cpp  cache_coordinator.cpp  definition_engine.cpp  definition_flow_interpreter.cpp  instance_identity.cpp  intent_resolver.cpp  io_runtime.cpp  knowledge_engine.cpp  language_engine.cpp  memory_store.cpp  namespace_registry.cpp  native_tool_registry.cpp  neural_math_engine.cpp  neural_signal_router.cpp  omni_bridge.cpp  operand.cpp  packet_capture_engine.cpp  preprocessor_runtime.cpp  processing_engine.cpp  project_alias_registry.cpp  project_resolver.cpp  query_runtime.cpp  reasoning_provider.cpp  recipe_authoring_engine.cpp  sdk.cpp  security_manager.cpp  self_review.cpp  session_coordinator.cpp  shell_lexicon.cpp  tool_flow_interpreter.cpp  types.cpp  unix_evidence_parser.cpp  versus_comparator.cpp  workflow_support.cpp  xpp_emitter.cpp  xpp_index.cpp  xpp_parser.cpp
src/tools/: mlp-lens-cli.ts  mlp-lens.ts
tests/: xpp_tests.cpp
tze/: operand.cpp  operand.hpp
(+21 files in other folders)
